feat: add buying price